REOPENED276690
AX: Voiceover/Safari is not reading the contents of divs with role=“tooltip”
https://bugs.webkit.org/show_bug.cgi?id=276690
Summary AX: Voiceover/Safari is not reading the contents of divs with role=“tooltip”
Greg Jellin
Reported 2024-07-16 16:13:42 PDT
Voiceover/Safari is not reading the contents of divs with role=“tooltip”, referenced by aria-described, if the div with role=“tooltip” is dynamically updated. At Salesforce, we use a single element for tooltips, and update that element when necessary. This is working in Chrome, but not Safari. Steps to reproduce: Visit the codepen: https://codepen.io/arodenbeck-sf/full/qBGRrQj Notice that when you tab to Test 1, and Test 2, things work as expected. Tests 3-5 are not read out by Voiceover, and the CTRL+Option+CMD+/ command is not bringing up the more content menu. Strangely, when tested in Salesforce, these tooltips were being read when tabbed too, but not if using VO navigation where keyboard focus follows VO focus.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-16 16:13:53 PDT
Tyler Wilcock
Comment 2 2024-08-18 17:08:25 PDT
EWS
Comment 3 2024-08-19 09:14:12 PDT
Committed 282430@main (70128b4a24b6): <https://commits.webkit.org/282430@main> Reviewed commits have been landed. Closing PR #32367 and removing active labels.
EWS
Comment 4 2024-08-20 11:17:10 PDT
Committed 280938.249@safari-7619-branch (e092010b0323): <https://commits.webkit.org/280938.249@safari-7619-branch> Reviewed commits have been landed. Closing PR #1619 and removing active labels.
Greg Jellin
Comment 5 2025-01-03 08:30:44 PST
Hello, we have discovered that this bug is still occurring on Safari iOS. When we update a container with new content and reference it by an aria-describedby, VoiceOver announces the content that was within the container previously. Please take a look at this on iOS.
Greg Jellin
Comment 6 2025-01-03 08:31:35 PST
Reopening
Note You need to log in before you can comment on or make changes to this bug.