AX: Voiceover/Safari is not reading the contents of divs with role=“tooltip” https://bugs.webkit.org/show_bug.cgi?id=276690 rdar://131877635

Reviewed by Chris Fleizach.

When the text underneath the target of an aria-describedby changes, we need to post AXExtendedDescriptionChanged to
ensure the accessibility tree is updated.

* LayoutTests/accessibility/dynamic-aria-describedby-text-expected.txt: Added.
* LayoutTests/accessibility/dynamic-aria-describedby-text.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleChildrenChanged):
(WebCore::AXObjectCache::updateIsolatedTree):

Canonical link: https://commits.webkit.org/282430@main